--- a/ch3_greedy.ipynb
+++ b/ch3_greedy.ipynb
@@ -395,7 +395,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q3. 문자열 뒤집기"
+    "## Q3. 문자열 뒤집기\n",
+    "https://www.acmicpc.net/problem/1439"
    ]
   },
   {
@@ -443,7 +444,7 @@
     "# 문자열 S 입력\n",
     "S = input()\n",
     "\n",
-    "answer = 0 # 정답 변수 선언 및 초기ㅗ하\n",
+    "answer = 0 # 정답 변수 선언 및 초기화\n",
     "\n",
     "for i in range(len(S)-1): # S의 마지막 값을 제외한 인덱스를 돌면서\n",
     "    if S[i] == S[0] and S[i+1] != S[0]: # S에서 인덱스 i에 해당하는 값이 첫 번째 값과 같고 그 다음 값이 첫 번째 값과 다르다면\n",
@@ -671,7 +672,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q6. 무지의 먹방 라이브 // RE"
+    "## Q6. 무지의 먹방 라이브 // RE\n",
+    "https://school.programmers.co.kr/learn/courses/30/lessons/42891"
    ]
   },
   {
@@ -705,45 +707,12 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* heappush()와 heappop()이 O(logN)의 시간 복잡도를 갖는다 하니, O(food_times의 길이 * log(food_times의 길이)) 인듯? 최악의 경우 food_times의 길이는 200,000이다.\n",
+    "* 이코테에는 1초 기준, N=100,000일 때 O(NlogN)으로 설계하면 해결 가능하다는데 200,000까지도 어찌저찌 해결이 되는 것 같다.\n",
     "\n",
     "#### 해설 본 후\n",
     "* 아예 전체 음식 먹는 시간보다 k가 더 작은 경우를 미리 예외처리하면 쓸 데 없는 반복을 하지 않을 수 있다. (어차피 음식이 다 먹어지는 경우를 미리 처리하기)\n",
     "* cycle을 time-cycle을 더하며 갱신할 것이 아니라 그냥 해당 time을 썼으면 됐다...(이전 음식의 시간)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# food_times = [3,1,2]\n",
-    "# k = 5\n",
-    "\n",
-    "# def solution(food_times, k):\n",
-    "#     # times = 0\n",
-    "#     # foods = len(food_times)\n",
-    "#     # while times > k:\n",
-    "#     #     times += min(food_times)\n",
-    "#     #     foods -= food_times.count(min(food_times))\n",
-    "    \n",
-    "#     food_check = [True] * len(food_times)\n",
-    "#     food_length = len(food_times)\n",
-    "#     min_food = min(food_times)\n",
-    "    \n",
-    "#     while True:\n",
-    "        \n",
-    "#         k -= min_food * food_length\n",
-    "    \n",
-    "#         for i in range(len(food_times)):\n",
-    "#             if food_times[i] == min_food:\n",
-    "#                 food_check[i] = False\n",
-    "#                 food_length -= 1\n",
-    "#             food_times[i] -= min_food\n",
-    "    \n",
-    "#     answer = 0 \n",
-    "#     return answer"
    ]
   },
   {
@@ -798,7 +767,8 @@
    "metadata": {},
    "source": [
     "#### 에렉투스 1차 때 풀었던 풀이(답 보고) // 속도는 이게 더 빠른 듯?\n",
-    "* heapq만 안 쓴 거지 해설과 로직은 같다."
+    "* heapq만 안 쓴 거지 해설과 로직은 같다.\n",
+    "* 이것도 O(NlogN)일듯?"
    ]
   },
   {
