--- a/ch4_implementation.ipynb
+++ b/ch4_implementation.ipynb
@@ -273,6 +273,270 @@
     "# 정답 출력\n",
     "print(count)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q7. 럭키 스트레이트\n",
+    "https://www.acmicpc.net/problem/18406"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 20분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 256MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 점수의 자릿수는 짝수로 들어오고, 정수가 입력되니까 그냥 문자열로 받아서 중간 인덱스 넘버 //로 구해서 슬라이싱으로 반 나누고, 각각 숫자 합 계산해서 비교하면 되겠다."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* N이 최대 8개의 자리수를 가지므로 O(8)일 듯. 상수시간 내에 해결이 가능하다. 1초 안에 가능.\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 다양한 풀이 방법이 있다. 반복문을 이용해도 되고, 이전에 풀었을 땐 list comprehension을 이용했는데 그래도 되고."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "READY\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 점수 N 입력\n",
+    "N = input()\n",
+    "\n",
+    "# 왼쪽과 오른쪽 반으로 나누기\n",
+    "left = N[:len(N)//2]\n",
+    "right = N[len(N)//2:]\n",
+    "\n",
+    "# 왼쪽과 오른쪽 각각의 자릿수들의 합이 서로 같다면\n",
+    "if sum(map(int, list(left))) == sum(map(int, list(right))):\n",
+    "    print('LUCKY') # 럭키를 출력\n",
+    "else: # 같지 않다면\n",
+    "    print('READY') # 레디를 출력\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q8. 문자열 재정렬"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 20분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 문자열에 반복문을 돌면서 알파벳 대문자와 숫자를 각각 분리해서 저장하고, 알파벳은 오름차순 정렬, 숫자는 합을 구한 뒤에 두 object를 붙여서 하나의 문자열로 만들어 출력하기"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* 반복문과 sorted() 이용하므로 O(N) + O(NlogN)일 듯. N은 문자열의 길이가 되는데 최악의 경우 10,000이므로 1초 내에 충분히 해결 가능\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 이전에 풀었을 땐 정규표현식을 썼네."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADDIJJJKKLSS20\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = '' # 알파벳이 들어갈 변수는 빈 문자열로 초기화\n",
+    "num = 0 # 숫자가 들어갈 변수는 0으로 초기화\n",
+    "for letter in input(): # 입력받은 문자열을 한 글자씩 확인하기 위해 반복\n",
+    "    if letter.isdigit(): # 확인하는 글자가 숫자라면\n",
+    "        num += int(letter) # int로 자료형 변경후 숫자 변수에 더해줌\n",
+    "    else: # 확인하는 글자가 알파벳이라면\n",
+    "        alpha += letter # 알파벳 변수에 추가해줌\n",
+    "\n",
+    "# 정답 출력(알파벳 변수에 sorted 적용하여 오름차순으로 정렬된 list 만들고 join으로 결합하여 문자열로 변경한 뒤 그 뒤에 숫자의 합을 문자열로 변경하여 붙여줌)\n",
+    "print(''.join(sorted(alpha))+str(num))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q9. 문자열 압축 // RE(풀이 시간 초과)\n",
+    "https://school.programmers.co.kr/learn/courses/30/lessons/60057"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 30분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 제일 앞부터 정해진 길이만큼 잘라야하므로, 문자열 길이의 반개부터 1개까지 모든 경우의 수를 확인하고 그 중 가장 짧은 것을 리턴하면 될 듯\n",
+    "\n",
+    "* 어떻게 자르지?\n",
+    "    * 위에서 구한 정해진 길이의 모든 경우의 수를 돌면서 해당 길이만큼만 자르기 위한 슬라이싱을 하기 위해 1씩 증가하는 새로운 변수를 도입. \n",
+    "    * 첫값과 끝값에 해당 숫자를 곱하면서 해당 길이만큼만 슬라이싱하고, 이를 리스트에 추가하면서 최근에 추가한 것과 현재 확인하고 있는 것을 비교하여 몇 개까지 같은지를 카운팅. \n",
+    "    * 카운팅한 수가 1이라면 다음 부분을 확인했을 때 다르면 그냥 리스트에 추가. \n",
+    "    * 1 이상이라면 최근에 추가한 부분 앞에 카운팅 횟수를 문자열로 붙여주고, 다음 부분을 리스트에 추가.\n",
+    "    * 마지막은 리스트를 join한 문자열의 길이를 전체 반복문 밖에 있는 가능한 압축 경우의 수를 모두 담을 리스트에 추가. 그리고 최솟값을 리턴.\n",
+    "* 시행착오\n",
+    "    * 입력 길이 확인해서 예외처리 할 경우 생각하기.\n",
+    "    * len(s) == 1일 경우 런타임에러 발생하므로 if문으로 예외처리 추가함"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* 문자열 길이 반 개만큼 반복문을 돌고, 그 안에서 해당 길이가 몇 개 있어야 전체 문자열 길이를 채울지 만큼 또 반복이 돌아감 => 최악의 경우 대략 O(N^2)이 나올 것 같은데 이 때 N은 문자열의 길이고 최악의 경우 1,000이므로 1초 내에 가능할듯.\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 로직은 비슷한데 코드 흐름이나 가독성이 답지가 더 명쾌하다. 내가 변수를 효율적으로 사용하지 못한 듯. 참고하자."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 = \"aabbaccc\"\n",
+    "s2 = \"ababcdcdababcdcd\"\n",
+    "s3 = \"abcabcdede\"\n",
+    "s4 = \"abcabcabcabcdededededede\"\n",
+    "s5 = \"xababcdcdababcdcd\"\n",
+    "\n",
+    "def solution(s):\n",
+    "    # 문자열의 길이를 변수로 선언\n",
+    "    length = len(s)\n",
+    "    \n",
+    "    # 문자열 길이가 1이면\n",
+    "    if length == 1:\n",
+    "        return 1 # 1 리턴\n",
+    "    \n",
+    "    cand = [] # 모든 가능한 방식으로 문자열을 압축한 경우를 담는 리스트 선언\n",
+    "    temp = [] # 각각의 방법으로 문자열을 압축할 때 압축된 문자열을 만들기 위해 사용할 리스트 선언\n",
+    "    # 문자열 압축은 제일 앞부터 생각하므로 한 묶음이 전체 길이의 반인 경우까지만 확인하면 되므로\n",
+    "    for i in range(1, (length//2)+1): # 한 묶음의 길이가 1개인 경우부터 전체 길이의 중간값(반)개의 경우까지 돌면서(이 때 슬라이싱 끝값에 i가 들어가므로 +1을 해줘야 함)\n",
+    "        d = 1 # 다음 묶음으로 진행하기 위한 숫자 변수 선언\n",
+    "        counts = 1 # 이전에 확인한 묶음과 몇 개까지 같은 묶음이 나오는 지 확인하기 위한 변수 선언\n",
+    "        # print(s[0:i], i)\n",
+    "        temp.append(s[0:i]) # 첫 번째 묶음을 temp list에 추가\n",
+    "        while d <= (length//i): # 묶음만큼 진행했을 때 해당 묶음의 범위 내에 전체 문자열의 길이가 포함되게 되지 않는 때까지 반복(확인하는 묶음이 전체 길이를 넘어가지 않는 때까지 반복)\n",
+    "            now = s[d*i:(d+1)*i] # 현재 확인하는 묶음을 변수로 선언\n",
+    "            if now == temp[-1]: # 현재 확인하는 묶음이 최근에 확인한 묶음(temp list의 마지막 원소)과 같다면\n",
+    "                counts += 1 # counts에 1 추가\n",
+    "            else: # 현재 확인하는 묶음이 최근에 확인한 묶음과 다르다면\n",
+    "                if counts > 1: # counts가 1 초과인 경우\n",
+    "                    temp[-1] = str(counts) + temp[-1] # 최근에 확인한 묶음 앞에 counts를 문자로 바꿔 앞에 붙여 문자열을 압축\n",
+    "                counts = 1 # counts를 1로 초기화\n",
+    "                temp.append(now) # 현재 확인한 묶음을 temp list에 추가하여 최근에 확인한 묶음을 갱신\n",
+    "            d += 1 # 다음 묶음으로 넘어가기 위해 d 변수에 1 추가\n",
+    "        cand.append(len(''.join(temp))) # 해당 묶음의 길이에 대해 문자열을 다 돌았으면 temp list에 담긴 묶음 문자열을 join하고 그 길이를 cand list에 추가\n",
+    "        # cand.append(''.join(temp))\n",
+    "        temp = [] # 다음 묶음 길이를 체크하기 위해 temp list를 초기화\n",
+    "    return min(cand) # 모든 묶음 길이를 체크한 뒤 cand list에 담긴 모든 경우의 수 중 길이가 가장 작은 것을 리턴\n",
+    "    # return cand\n",
+    "\n",
+    "solution(s2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(s):\n",
+    "    answer = len(s)\n",
+    "    # 1개 단위(step)부터 압축 단위를 늘려가며 확인\n",
+    "    for step in range(1, len(s) // 2 + 1):\n",
+    "        compressed = ''\n",
+    "        prev = s[0:step] # 앞에서부터 step 만큼의 문자열 추출\n",
+    "        count = 1\n",
+    "        # 단위(step) 크기만큼 증가시키며 이전 문자열과 비교\n",
+    "        for j in range(step, len(s), step):\n",
+    "            # 이전 상태와 동일하다면 압축 횟수(count) 증가\n",
+    "            if prev == s[j:j + step]:\n",
+    "                count += 1\n",
+    "            # 다른 문자열이 나왔다면(더 이상 압축하지 못하는 경우라면)\n",
+    "            else:\n",
+    "                compressed += str(count) + prev if count >= 2 else prev\n",
+    "                prev = s[j:j + step] # 다시 상태 초기화\n",
+    "                count = 1\n",
+    "            # 남아 있는 문자열에 대해서 처리\n",
+    "            compressed += str(count) + prev if count >= 2 else prev\n",
+    "            # 만들어지는 압축 문자열이 가장 짧은 것이 정답\n",
+    "            answer = min(answer, len(compressed))\n",
+    "        return answer"
+   ]
   }
  ],
  "metadata": {
