ch3 unsolved problem classify & ch4 Q10 resolve

--- a/ch4_implementation.ipynb
+++ b/ch4_implementation.ipynb
@@ -537,6 +537,184 @@
     "            answer = min(answer, len(compressed))\n",
     "        return answer"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q10. 자물쇠와 열쇠 // RE(풀이 시간 초과)\n",
+    "https://school.programmers.co.kr/learn/courses/30/lessons/60059"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 40분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* lock의 상하좌우를 각각 key의 크기 M-1만큼 늘려서 키가 들어가게 되는 모든 경우를 체크할 수 있게 하고, key를 기본, 90도, 180도, 270도 회전하여 모든 경우의 수에 대해 lock에 끼워 확인하면 될 듯\n",
+    "* 슬라이드를 삭 하면서 모든 경우의 수를 체크해야 할 것 같은데 이걸 어떻게 하지. => 4중 for문... 어라 되네?\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* O(M^2)+ O((M+N)^2 * N^2) => 거의 O(N^4) 이상인데 N의 최대값이 20이라 16만번 정도(넘겠지만) 연산이어서 통과한듯...?\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[9, 9, 9, 9, 9, 9, 9], [9, 9, 9, 9, 9, 9, 9], [9, 9, 1, 1, 1, 9, 9], [9, 9, 1, 1, 1, 9, 9], [9, 9, 1, 1, 1, 9, 9], [9, 9, 9, 10, 9, 9, 9], [9, 9, 9, 10, 9, 9, 9]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 테케 1번만 실패... 왜일까? \n",
+    "# => 그냥 for문만 끝나면 True를 리턴하게 했으니까.. if cond: 넣어서 해결!\n",
+    "\n",
+    "from copy import deepcopy \n",
+    "\n",
+    "key = [[0, 0, 0], [1, 0, 0], [0, 1, 1]]\n",
+    "lock = [[1, 1, 1], [1, 1, 0], [1, 0, 1]]\n",
+    "\n",
+    "\n",
+    "# 열쇠를 반시계 방향으로 90도 회전시키는 함수 구현\n",
+    "def rotate_cc_90(key):\n",
+    "    '''\n",
+    "    정방행렬일 때, 반시계 방향으로 90도 회전시켰을 때 1행을 뒤집은 것이 1열이 되고, 2행을 뒤집은 것이 2열이 되고, ... n행을 뒤집은 것이 n열이 된다.\n",
+    "    \n",
+    "    ex)     기존 키     반시계 방향으로 90도 회전한 키\n",
+    "            0 0 0 0     0 1 0 1\n",
+    "            1 0 1 1     0 1 1 1\n",
+    "            0 1 1 0     0 0 1 1\n",
+    "            1 1 1 1     0 1 0 1\n",
+    "    '''\n",
+    "    M = len(key) # 키의 길이를 변수로 선언 (정사각형이므로 한 변만)\n",
+    "    n_key = [[] for _ in range(M)] # 새로운 키(반시계 90도 회전한 키)를 담을 변수 선언\n",
+    "    for i in range(M): # 행을 표기하기 위해 길이만큼 반복\n",
+    "        for j in range(M): # 열을 표기하기 위해 길이만큼 반복\n",
+    "            n_key[j].append(key[i][::-1][j]) # 기존 키의 행을 뒤집어서 각각의 원소를 각 열에 순서대로 하나씩 넣는다\n",
+    "    return n_key\n",
+    "    \n",
+    "\n",
+    "def solution(key, lock):\n",
+    "    # 열쇠와 자물쇠의 길이를 변수로 선언\n",
+    "    M = len(key)\n",
+    "    N = len(lock)\n",
+    "    \n",
+    "    # 자물쇠의 크기 확장(상하좌우를 각각 M-1 만큼 확장). 확장부분의 숫자는 임의로 9를 넣음\n",
+    "    use_lock = [[9]*(2*(M-1)+N)]*(M-1) + [[9]*(M-1) + row + [9]*(M-1) for row in lock] + [[9]*(2*(M-1)+N)]*(M-1)\n",
+    "    \n",
+    "    # 모든 회전시킨 키에 대해 체크\n",
+    "    for use_key in [key, rotate_cc_90(key), rotate_cc_90(rotate_cc_90(key)), rotate_cc_90(rotate_cc_90(rotate_cc_90(key)))]: # 기존 키, 반시계 방향으로 90도 회전한 키, 180도 회전한 키, 270도 회전한 키에 대해 반복\n",
+    "        # 확장한 자물쇠에서 키가 한칸이라도 닿는 경우를 모두 체크\n",
+    "        for i in range(M+N-1): # 키가 닿는 부분 중 실제 자물쇠 부분만 체크하기 위함\n",
+    "            for j in range(M+N-1): # 키가 닿는 부분 중 실제 자물쇠 부분만 체크하기 위함\n",
+    "                temp_lock = deepcopy(use_lock) # 자물쇠 부분 확인할 때 자물쇠에 키의 값을 더한 값이 1인지를 체크할 것이므로 비파괴적 연산을 수행할 것이기에 원래 자물쇠 보존을 위해 deepcopy를 이용하여 임시 자물쇠를 선언\n",
+    "                for k in range(M): # 키의 크기만큼만 반복\n",
+    "                    for l in range(M): # 키의 크기만큼만 반복\n",
+    "                        temp_lock[i+k][j+l] += use_key[k][l] # 자물쇠와 키 결합(값을 합침)\n",
+    "                cond = True # 자물쇠와 키를 더한 값이 모두 1이어야 맞는 경우이며 이를 체크하기 위해 cond 변수를 도입\n",
+    "                for x in range(M-1, M+N-1): # 실제 자물쇠의 행 범위 체크\n",
+    "                    if not cond: # cond가 False라면\n",
+    "                        break # 반복 중지\n",
+    "                    for y in range(M-1, M+N-1): # 실제 자물쇠의 열 범위 체크\n",
+    "                        if temp_lock[x][y] != 1: # 실제 자물쇠의 원소들을 체크하면서 만약 1이 아닌게 있다면\n",
+    "                            cond = False # 열리지 않으므로 cond를 False로 변경\n",
+    "                            if not cond: # cond가 False라면\n",
+    "                                break # 반복 중지\n",
+    "                else: # 키가 합쳐진 자물쇠의 원소들을 다 확인한 뒤\n",
+    "                    if cond: ## 요놈이 들어가야 했구나 # cond가 True라면(키와 합쳐진 자물쇠 값이 모두 1이었다면)\n",
+    "                        return True # True를 리턴\n",
+    "    return False # 코드를 다 돌고 True를 리턴하지 않았다면 False를 리턴\n",
+    "solution(key, lock)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q11. 뱀\n",
+    "https://www.acmicpc.net/problem/3190"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 40분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* \n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
