--- a/ch4_implementation.ipynb
+++ b/ch4_implementation.ipynb
@@ -559,7 +559,8 @@
     "\n",
     "#### 아이디어\n",
     "* lock의 상하좌우를 각각 key의 크기 M-1만큼 늘려서 키가 들어가게 되는 모든 경우를 체크할 수 있게 하고, key를 기본, 90도, 180도, 270도 회전하여 모든 경우의 수에 대해 lock에 끼워 확인하면 될 듯\n",
-    "* 슬라이드를 삭 하면서 모든 경우의 수를 체크해야 할 것 같은데 이걸 어떻게 하지. => 4중 for문... 어라 되네?\n"
+    "* 슬라이드를 삭 하면서 모든 경우의 수를 체크해야 할 것 같은데 이걸 어떻게 하지. => 4중 for문... 어라 되네?\n",
+    "* 키가 자물쇠에 닿는 모든 경우의 수에서 키값을 자물쇠에 더해 실제 자물쇠 범위의 값들이 모두 1이라면 True 리턴. 모든 경우의 수를 다 돌아도 실제 자물쇠 범위 값들을 모두 1로 만들 수 없다면 False 리턴\n"
    ]
   },
   {
@@ -571,7 +572,10 @@
     "* O(M^2)+ O((M+N)^2 * N^2) => 거의 O(N^4) 이상인데 N의 최대값이 20이라 16만번 정도(넘겠지만) 연산이어서 통과한듯...?\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 답지에선 자물쇠와 열쇠의 크기가 작아 완전탐색해도 시간 널널하므로 자물쇠의 크기를 통 크게 3배(...) 늘렸다 => 확장된 자물쇠를 만드는 코드가 간단해지고 인덱싱, 슬라이싱도 편해짐\n",
+    "* 답지에선 자물쇠의 실제 부분이 1인지 확인하는 코드를 따로 함수로 만듦 => 가독성 up + 메인코드의 간결성 up\n",
+    "* 내가 사용한 deepcopy는 자물쇠에 키를 더했다 빼는 답지의 코드보다 공간복잡도 면에서 손해\n",
+    "    * deepcopy가 꽤나 느리다고 한다. 반복문 한 번 더 돌리는 것보단 빠를 거라고 생각했는데 아닐 수도 있을 듯\n"
    ]
   },
   {
@@ -637,11 +641,11 @@
     "    # 모든 회전시킨 키에 대해 체크\n",
     "    for use_key in [key, rotate_cc_90(key), rotate_cc_90(rotate_cc_90(key)), rotate_cc_90(rotate_cc_90(rotate_cc_90(key)))]: # 기존 키, 반시계 방향으로 90도 회전한 키, 180도 회전한 키, 270도 회전한 키에 대해 반복\n",
     "        # 확장한 자물쇠에서 키가 한칸이라도 닿는 경우를 모두 체크\n",
-    "        for i in range(M+N-1): # 키가 닿는 부분 중 실제 자물쇠 부분만 체크하기 위함\n",
-    "            for j in range(M+N-1): # 키가 닿는 부분 중 실제 자물쇠 부분만 체크하기 위함\n",
+    "        for i in range(M+N-1): # 키가 닿는 부분을 모두 체크하기 위함\n",
+    "            for j in range(M+N-1): # 키가 닿는 부분을 모두 체크하기 위함\n",
     "                temp_lock = deepcopy(use_lock) # 자물쇠 부분 확인할 때 자물쇠에 키의 값을 더한 값이 1인지를 체크할 것이므로 비파괴적 연산을 수행할 것이기에 원래 자물쇠 보존을 위해 deepcopy를 이용하여 임시 자물쇠를 선언\n",
-    "                for k in range(M): # 키의 크기만큼만 반복\n",
-    "                    for l in range(M): # 키의 크기만큼만 반복\n",
+    "                for k in range(M): # 키의 크기만큼만 반복 => 키의 원소를 가져오기 위해 & 키의 크기만큼 자물쇠에 닿는 영역을 선택하기 위해\n",
+    "                    for l in range(M): # 키의 크기만큼만 반복 => 키의 원소를 가져오기 위해 & 키의 크기만큼 자물쇠에 닿는 영역을 선택하기 위해\n",
     "                        temp_lock[i+k][j+l] += use_key[k][l] # 자물쇠와 키 결합(값을 합침)\n",
     "                cond = True # 자물쇠와 키를 더한 값이 모두 1이어야 맞는 경우이며 이를 체크하기 위해 cond 변수를 도입\n",
     "                for x in range(M-1, M+N-1): # 실제 자물쇠의 행 범위 체크\n",
@@ -672,7 +676,54 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 2차원 리스트 90도 회전\n",
+    "def rotate_a_matrix_by_90_degree(a):\n",
+    "    n = len(a) # 행 길이 계산\n",
+    "    m = len(a[0]) # 열 길이 계산\n",
+    "    result = [[0] * n for _ in range(m)] # 결과 리스트\n",
+    "    for i in range(n):\n",
+    "        for j in range(m):\n",
+    "            result[j][n - 1 - i] = a[i][j] ## 표현이 달라서 그렇지 내 함수와 로직은 같다. 기존 리스트의 각 행에서 맨 뒷값부터 가져와 새 리스트의 각 열에 하나씩 넣는 것\n",
+    "    return result\n",
+    "\n",
+    "# 자물쇠의 중간 부분이 모두 1인지 확인\n",
+    "def check(new_lock):\n",
+    "    lock_length = len(new_lock) // 3 ## 자물쇠의 크기를 3배 확장할 것이므로 실제 길이는 3을 나눠준 몫이 됨\n",
+    "    for i in range(lock_length, lock_length * 2): # 실제 자물쇠 부분은 3배 확장했으므로 2배(중간) 지점 확인하면 됨\n",
+    "        for j in range(lock_length, lock_length * 2): # 실제 자물쇠 부분은 3배 확장했으므로 2배(중간) 지점 확인하면 됨\n",
+    "            if new_lock[i][j] != 1:\n",
+    "                return False\n",
+    "    return True\n",
+    "\n",
+    "def solution(key, lock):\n",
+    "    n = len(lock)\n",
+    "    m = len(key)\n",
+    "    # 자물쇠의 크기를 기존의 3배로 변환\n",
+    "    new_lock = [[0] * (n * 3) for _ in range(n * 3)]\n",
+    "    # 새로운 자물쇠의 중앙 부분에 기존의 자물쇠 넣기\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            new_lock[i + n][j + n] = lock[i][j]\n",
+    "    \n",
+    "    # 4가지 방향에 대해서 확인\n",
+    "    for rotation in range(4):\n",
+    "        key = rotate_a_matrix_by_90_degree(key) # 열쇠 회전\n",
+    "        for x in range(n * 2):\n",
+    "            for y in range(n * 2):\n",
+    "                # 자물쇠에 열쇠를 끼워 넣기\n",
+    "                for i in range(m):\n",
+    "                    for j in range(m):\n",
+    "                        new_lock[x + i][y + j] += key[i][j]\n",
+    "                # 새로운 자물쇠에 열쇠가 정확히 들어맞는지 검사\n",
+    "                if check(new_lock) == True:\n",
+    "                    return True\n",
+    "                # 자물쇠에서 열쇠를 다시 빼기\n",
+    "                for i in range(m):\n",
+    "                    for j in range(m):\n",
+    "                        new_lock[x + i][y + j] -= key[i][j]\n",
+    "    return False\n"
+   ]
   },
   {
    "attachments": {},
