--- a/ch4_implementation.ipynb
+++ b/ch4_implementation.ipynb
@@ -730,7 +730,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q11. 뱀\n",
+    "## Q11. 뱀 // RE(풀이 시간 초과)\n",
     "https://www.acmicpc.net/problem/3190"
    ]
   },
@@ -742,6 +742,228 @@
     "#### 제한\n",
     "* 풀이 시간 40분\n",
     "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 하라는 대로 하기...\n",
+    "* 뱀의 몸통이 존재하는 좌표를 queue로 만들면 편하겠다. 인덱스 0을 꼬리, -1을 머리로 잡고 append와 popleft 사용하면 편리할 듯\n",
+    "\n",
+    "#### 시행착오\n",
+    "* 구현 문제는 신경쓸 게 정말 많다... 조건에 어긋나지 않게 예외처리도 잘 해줘야 하고 조건을 빼먹지 않아야 하고..."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* O(L*X) 인 것 같은데 최악의 경우 L=100, X=10000이므로 1,000,000번 정도의 연산이 필요 => 1초 내에 가능\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 나는 마지막 회전 정보 입력이 끝나면 코드가 더 진행되지 않으므로 조건을 이용한 임의의 정보를 추가하여 마지막 회전 뒤에도 끝까지 나아갈 수 있게 코드를 짰지만, 답지에서는 아예 진행과 회전을 따로 생각하여 시간을 체크하며 회전할 시간이 되면 방향 정보를 불러와 회전하는 식으로 구현함 => 나눠놓은 부분 참고하기\n",
+    "* direction 계산할 때 나머지 이용해서 계산하는 거 좋네\n",
+    "* 그래도 이전에 풀었을 때 코드보다는 간단하게 짠 듯."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "# 보드 크기 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "# 보드 생성(벽 값은 임의로 9로 설정)\n",
+    "# (편의를 위해 벽까지 생성 -> N+2 크기로 만든다)\n",
+    "board = [[9]*(N+2)] + [[9] + [0]*(N) + [9] for _ in range(N)] + [[9]*(N+2)]\n",
+    "\n",
+    "# 사과 개수 K 입력\n",
+    "K = int(input())\n",
+    "\n",
+    "# 사과의 위치 입력(사과 값은 임의로 1로 설정)\n",
+    "for _ in range(K):\n",
+    "    row, col = map(int, input().split())\n",
+    "    board[row][col] = 1 # (문제에서 보드의 행과 열을 말할 때 1-index를 사용하므로 그냥 인덱싱해도 된다 ~ 벽을 만들어 인덱스 0 자리엔 벽이 들어가므로.)\n",
+    "    \n",
+    "# 뱀의 방향 변환 횟수 L 입력\n",
+    "L = int(input())\n",
+    "\n",
+    "# 뱀의 방향 변환 정보 입력\n",
+    "direction_change = []\n",
+    "for _ in range(L):\n",
+    "    X, C = input().split() # X는 게임 시작 이후 흐른 시간, C는 방향 의미\n",
+    "    direction_change.append([int(X), C])\n",
+    "    \n",
+    "# 시작점에 뱀 생성(뱀이 위치한 곳의 값은 임의로 5로 설정)\n",
+    "board[1][1] = 5\n",
+    "\n",
+    "# 뱀의 몸통에 해당하는 좌표들을 저장할 큐 선언(인덱스 0이 꼬리, -1이 머리)\n",
+    "snakes = deque()\n",
+    "# 뱀의 현재 위치 큐에 삽입\n",
+    "snakes.append((1, 1))\n",
+    "\n",
+    "# 뱀이 이동할 방향 정의(상0 좌1 하2 우3) ~ 반시계 +1, 시계 -1\n",
+    "dx = [-1, 0, 1, 0]\n",
+    "dy = [0, -1, 0, 1]\n",
+    "\n",
+    "\n",
+    "def simulation(board, direction_change):\n",
+    "    answer = 0 # 게임 경과 시간(정답) 담을 변수 선언\n",
+    "    past_time = 0 # 이전 방향전환까지 걸린 시간 저장\n",
+    "    direction = 3 # 현재 방향(오른쪽) 저장\n",
+    "    x, y = snakes[-1] # 뱀 머리의 첫 위치 좌표 (x, y) 저장\n",
+    "    for time, rotate in direction_change+[[10100, '']]: # 방향 변환 정보를 돌면서 + 마지막 방향 전환 후 쭉 직진이 가능하도록 조건을 통한 임의의 정보 추가\n",
+    "        for _ in range(time - past_time): # 직전의 방향 전환이 끝난 시점부터 다음 방향 전환 시점까지 반복\n",
+    "            answer += 1 # 경과 시간에 1초 추가\n",
+    "            \n",
+    "            # 뱀의 머리가 진행할 칸 선언\n",
+    "            nx = x + dx[direction]\n",
+    "            ny = y + dy[direction]\n",
+    "            \n",
+    "            # 진행한 곳이 벽이거나 뱀의 몸통이면\n",
+    "            if board[nx][ny] == 9 or board[nx][ny] == 5:\n",
+    "                return answer\n",
+    "            # 진행한 곳이 사과이면\n",
+    "            elif board[nx][ny] == 1:\n",
+    "                snakes.append((nx, ny)) # 해당 좌표를 몸통에 추가(머리)\n",
+    "                board[nx][ny] = 5 # 머리가 위치한 좌표의 값을 5로 갱신\n",
+    "                # 뱀 머리 위치 갱신\n",
+    "                x = nx\n",
+    "                y = ny\n",
+    "            # 진행한 곳이 빈 칸이면\n",
+    "            else:\n",
+    "                snakes.append((nx, ny)) # 해당 좌표를 몸통에 추가(머리)\n",
+    "                board[nx][ny] = 5 # 머리가 위치한 좌표의 값을 5로 갱신\n",
+    "                tx, ty = snakes.popleft() # 꼬리 이동을 위해 제거\n",
+    "                board[tx][ty] = 0 # 꼬리가 지나간 부분을 0으로 갱신\n",
+    "                # 뱀 머리 위치 갱신\n",
+    "                x = nx\n",
+    "                y = ny\n",
+    "                            \n",
+    "        # 하나의 방향 전환 정보를 처리했으므로 이전 방향전환까지 걸린 시간 갱신\n",
+    "        past_time = time\n",
+    "        \n",
+    "        # 주어진 정보대로 방향 전환\n",
+    "        if rotate == 'L':\n",
+    "            direction = 0 if direction == 3 else direction+1 # 왼쪽(반시계) 방향으로 전환\n",
+    "        elif rotate == 'D':\n",
+    "            direction = 3 if direction == 0 else direction-1 # 오른쪽(시계) 방향으로 전환\n",
+    "\n",
+    "# 정답 출력\n",
+    "print(simulation(board, direction_change))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = int(input())\n",
+    "k = int(input())\n",
+    "data = [[0] * (n+1) for _ in range(n+1)] # 맵 정보\n",
+    "info = [] # 방향 회전 정보\n",
+    "\n",
+    "# 맵 정보(사과 있는 곳은 1로 표시)\n",
+    "for _ in range(k):\n",
+    "    a, b = map(int, input().split())\n",
+    "    data[a][b] = 1\n",
+    "\n",
+    "# 방향 회전 정보 입력\n",
+    "l = int(input())\n",
+    "for _ in range(l):\n",
+    "    x, c = input().split()\n",
+    "    info.append(int(x), c)\n",
+    "    \n",
+    "# 처음에는 오른쪽을 보고 있으므로(동, 남, 서, 북)\n",
+    "dx = [0, 1, 0, -1]\n",
+    "dy = [1, 0, -1, 0]\n",
+    "\n",
+    "def turn(direction, c): ## 나머지 이용하는 방법 좋네\n",
+    "    if c == 'L':\n",
+    "        direction = (direction - 1) % 4\n",
+    "    else:\n",
+    "        direction = (direction + 1) % 4\n",
+    "    return direction\n",
+    "\n",
+    "def simulate():\n",
+    "    x, y = 1, 1 # 뱀의 머리 위치\n",
+    "    data[x][y] = 2 # 뱀이 존재하는 위치는 2로 표시\n",
+    "    direction = 0 # 처음에는 동쪽을 보고 있음\n",
+    "    time = 0 # 시작한 뒤에 지난 '초' 시간\n",
+    "    index = 0 # 다음에 회전할 정보\n",
+    "    q = [(x, y)] # 뱀이 차지하고 있는 위치 정보(꼬리가 앞쪽)\n",
+    "    while True:\n",
+    "        nx = x + dx[direction]\n",
+    "        ny = y + dy[direction]\n",
+    "        \n",
+    "        # 맵 범위 안에 있고, 뱀의 몸통이 없는 위치라면\n",
+    "        if 1 <= nx and nx <= n and 1 <= ny and ny <= n and data[nx][ny] != 2:\n",
+    "            # 사과가 없다면 이동 후 꼬리 제거\n",
+    "            if data[nx][ny] == 0:\n",
+    "                data[nx][ny] = 2\n",
+    "                q.append((nx, ny))\n",
+    "                px, py = q.pop(0)\n",
+    "                data[px][py] = 0\n",
+    "            # 사과가 있다면 이동후에 꼬리 그대로 두기\n",
+    "            if data[nx][ny] == 1:\n",
+    "                data[nx][ny] = 2\n",
+    "                q.append((nx, ny))\n",
+    "        # 벽이나 뱀의 몸통과 부딪혔다면\n",
+    "        else:\n",
+    "            time += 1\n",
+    "            break\n",
+    "        x, y = nx, ny # 다음 위치로 머리를 이동\n",
+    "        time += 1\n",
+    "        ## 이 부분을 나눠놓음으로써 방향전환 정보가 끝나도 계속 앞으로 가게 할 수 있었다. 참고하기\n",
+    "        if index < l and time == info[index][0]: # 회전할 시간인 경우 회전\n",
+    "            direction = turn(direction, info[index][1])\n",
+    "            index += 1\n",
+    "        return time\n",
+    "\n",
+    "print(simulate)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q12. 기둥과 보 설치\n",
+    "https://school.programmers.co.kr/learn/courses/30/lessons/60061\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 50분\n",
+    "* 시간 제한 5초\n",
     "* 메모리 제한 128MB\n",
     "\n",
     "#### 아이디어\n",
