--- a/ch4_implementation.ipynb
+++ b/ch4_implementation.ipynb
@@ -952,7 +952,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q12. 기둥과 보 설치\n",
+    "## Q12. 기둥과 보 설치 // RE(풀이 시간 초과)\n",
     "https://school.programmers.co.kr/learn/courses/30/lessons/60061\n"
    ]
   },
@@ -967,7 +967,13 @@
     "* 메모리 제한 128MB\n",
     "\n",
     "#### 아이디어\n",
-    "* "
+    "* 기둥 가능한지 체크하는 함수, 보 가능한지 체크하는 함수 => 설치할 때 체크 + 삭제할 때 주변 기둥, 보들이 만족하는 지 체크\n",
+    "* 설치 함수, 삭제 함수도 만드는 게 편할 듯 => 설치 함수는 그냥 체크함수로 대체 가능. 삭제함수는 여러 개를 체크해야 하므로 만들어두는 게 편하긴 하겠다\n",
+    "* 좌표를 체크할 때 해당 좌표 기점으로 기둥과 보가 동시에 있을 수도 있다. 기둥은 0, 보는 1이니 둘 다 있는 건 2로 해보자\n",
+    "\n",
+    "#### 시행착오\n",
+    "* 함수 안에 들어갈 매개변수 빠뜨리지 않게 잘 확인할 것\n",
+    "* 분명히 맞게 짰는데 답이 아니라면 오타를 냈거나 연산자를 잘못 쓰진 않았는지 체크하자...(디버깅은 힘들다ㅠ)"
    ]
   },
   {
@@ -976,10 +982,334 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* O(N^2 + build_frame의 길이)가 될 것 같은데, N은 최대 100이고 build_frame의 길이는 최대 1000이므로 5초면 넉넉할 것이다.\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 전체 명령 개수가 1000개 이하이고, 제한 시간은 5초이므로 O(M^3)으로 해결해도 충분하다 => 설치 및 삭제할 때마다 전체 구조물을 확인해도 된다 => 복잡한 조건을 생각하지 말고 그냥 전체 돌면서 다 확인하는 방식으로 해도 된다\n",
+    "* 어차피 조건에 벽면을 벗어나게 구조물을 설치하는 경우는 없고, 바닥에 보를 설치하는 경우도 없고, 구조물이 겹치거나 없는 구조물을 삭제하는 경우는 없다고 했다. 그래서 답지에선 불필요한 조건절 싹 빼고, 좌표를 표기하는 이중리스트 만들 필요도 없고, 그냥 설치한 구조물의 정보를 담은 리스트 하나를 계속 굴리며 해결했다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 0, 0],\n",
+       " [1, 1, 1],\n",
+       " [2, 1, 0],\n",
+       " [2, 2, 1],\n",
+       " [3, 2, 1],\n",
+       " [4, 2, 1],\n",
+       " [5, 0, 0],\n",
+       " [5, 1, 0]]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "build_frame1 = [[1,0,0,1],[1,1,1,1],[2,1,0,1],[2,2,1,1],[5,0,0,1],[5,1,0,1],[4,2,1,1],[3,2,1,1]]\n",
+    "build_frame2 = [[0,0,0,1],[2,0,0,1],[4,0,0,1],[0,1,1,1],[1,1,1,1],[2,1,1,1],[3,1,1,1],[2,0,0,0],[1,1,1,0],[2,2,0,1]]\n",
+    "\n",
+    "# 기둥이 성립 가능한지 체크하는 함수 선언\n",
+    "def check_pillar(n, x, y, wall):\n",
+    "    # 해당 좌표에서 벽 안에 기둥을 세울 수 있으면서\n",
+    "    if 0<=x<=n and 0<=y<n:\n",
+    "        # 바닥 위에 있으면 가능\n",
+    "        if y==0:\n",
+    "            return True\n",
+    "        # 보의 한쪽 끝 부분 위에 있으면 가능\n",
+    "        if (0<=x-1 and (wall[x-1][y]==1 or wall[x-1][y]==2)) or (wall[x][y]==1 or wall[x][y]==2):\n",
+    "            return True\n",
+    "        # 다른 기둥 위에 있으면 가능\n",
+    "        if (0<=y-1 and (wall[x][y-1] == 0 or wall[x][y-1] == 2)):\n",
+    "            return True\n",
+    "    # 그 외의 경우 불가능\n",
+    "    return False\n",
+    "\n",
+    "# 보가 성립 가능한지 체크하는 함수 선언\n",
+    "def check_beam(n, x, y, wall):\n",
+    "    # 해당 좌표에서 벽 안에 보를 세울 수 있으면서\n",
+    "    if 0<=x<n and 0<=y<=n:\n",
+    "        # 한쪽 끝 부분이 기둥 위에 있으면 가능\n",
+    "        if 0<=y-1 and ((wall[x][y-1] == 0 or wall[x][y-1] == 2) or (x+1<=n and (wall[x+1][y-1] == 0 or wall[x+1][y-1] == 2))):\n",
+    "            return True\n",
+    "        # 양쪽 끝 부분이 다른 보와 동시에 연결되어 있으면 가능\n",
+    "        if (0<=x-1 and (wall[x-1][y]==1 or wall[x-1][y]==2)) and (x+1 < n and (wall[x+1][y]==1 or wall[x+1][y]==2)): ## 하.. 이걸 둘 다 x-1로 해놨었네\n",
+    "            return True\n",
+    "    # 그 외의 경우 불가능\n",
+    "    return False\n",
+    "\n",
+    "# 기둥이 삭제 가능한지 체크하는 함수 선언\n",
+    "def can_delete_pillar(n, x, y, wall):\n",
+    "    # 원래 해당 좌표의 건설 정보 저장\n",
+    "    origin = wall[x][y]\n",
+    "    \n",
+    "    # 일단 해당 위치 기둥을 없애보고\n",
+    "    if wall[x][y] == 2:\n",
+    "        wall[x][y] = 1\n",
+    "    elif wall[x][y] == 0:\n",
+    "        wall[x][y] = -1\n",
+    "    \n",
+    "    # 해당 기둥 위에 오른쪽 끝이 걸친 보가 있다면 해당 기둥 없어도 성립되는지 확인\n",
+    "    if (0<=x-1 and y+1<=n) and (wall[x-1][y+1] == 1 or wall[x-1][y+1] == 2):\n",
+    "        if not check_beam(n, x-1, y+1, wall): # 성립 안 된다면\n",
+    "            wall[x][y] = origin # 건설 정보 원래대로 돌리고\n",
+    "            return False # 불가능 처리\n",
+    "    # 해당 기둥 위에 왼쪽 끝이 걸친 보가 있다면 해당 기둥 없어도 성립되는지 확인\n",
+    "    if y+1<=n and (wall[x][y+1] == 1 or wall[x][y+1] == 2):\n",
+    "        if not check_beam(n, x, y+1, wall): # 성립 안 된다면\n",
+    "            wall[x][y] = origin # 건설 정보 원래대로 돌리고\n",
+    "            return False # 불가능 처리\n",
+    "    # 해당 기둥 위에 기둥이 있다면 해당 기둥 없어도 성립되는지 확인\n",
+    "    if y+1<n and (wall[x][y+1] == 0 or wall[x][y+1] == 2):\n",
+    "        if not check_pillar(n, x, y+1, wall): # 성립 안 된다면\n",
+    "            wall[x][y] = origin # 건설 정보 원래대로 돌리고\n",
+    "            return False # 불가능 처리\n",
+    "    \n",
+    "    # 위의 케이스들이 아니라면 삭제가 가능한 것이므로\n",
+    "    wall[x][y] = origin # 건설 정보 원래대로 돌리고\n",
+    "    return True # 가능 처리\n",
+    "\n",
+    "# 보가 삭제 가능한지 체크하는 함수 선언\n",
+    "def can_delete_beam(n, x, y, wall):\n",
+    "    # 원래 해당 좌표의 건설 정보 저장\n",
+    "    origin = wall[x][y]\n",
+    "    \n",
+    "    # 일단 해당 위치 보를 없애보고\n",
+    "    if wall[x][y] == 2:\n",
+    "        wall[x][y] = 0\n",
+    "    elif wall[x][y] == 1:\n",
+    "        wall[x][y] = -1\n",
+    "        \n",
+    "    # 해당 보 왼쪽에 보가 있다면 해당 보 없어도 성립되는지 확인\n",
+    "    if 0<=x-1 and (wall[x-1][y] == 1 or wall[x-1][y] == 2):\n",
+    "        if not check_beam(n, x-1, y, wall): # 성립 안 된다면\n",
+    "            wall[x][y] = origin # 건설 정보 원래대로 돌리고\n",
+    "            return False # 불가능 처리\n",
+    "    # 해당 보 오른쪽에 보가 있다면 해당 보 없어도 성립되는지 확인\n",
+    "    if x+1<n and (wall[x+1][y] == 1 or wall[x+1][y] == 2):\n",
+    "        if not check_beam(n, x+1, y, wall): # 성립 안 된다면\n",
+    "            wall[x][y] = origin # 건설 정보 원래대로 돌리고\n",
+    "            return False # 불가능 처리\n",
+    "    # 해당 보 왼쪽 끝 위에 기둥이 있다면 해당 보 없어도 성립되는지 확인\n",
+    "    if wall[x][y] == 0:\n",
+    "        if not check_pillar(n, x, y, wall): # 성립 안 된다면\n",
+    "            wall[x][y] = origin # 건설 정보 원래대로 돌리고\n",
+    "            return False # 불가능 처리\n",
+    "    # 해당 보 오른쪽 끝 위에 기둥이 있다면 해당 보 없어도 성립되는지 확인\n",
+    "    if x+1<=n and (wall[x+1][y] == 0 or wall[x+1][y] == 2):\n",
+    "        if not check_pillar(n, x+1, y, wall): # 성립 안 된다면\n",
+    "            wall[x][y] = origin # 건설 정보 원래대로 돌리고\n",
+    "            return False # 불가능 처리\n",
+    "    \n",
+    "    # 위의 케이스들이 아니라면 삭제가 가능한 것이므로\n",
+    "    wall[x][y] = origin # 건설 정보 원래대로 돌리고\n",
+    "    return True # 가능 처리\n",
+    "\n",
+    "\n",
+    "def solution(n, build_frame):\n",
+    "    wall = [[-1] * (n+1) for _ in range(n+1)] # 기둥과 보 설치할 벽면 구성\n",
+    "    \n",
+    "    # 건설 계획을 돌면서\n",
+    "    for build in build_frame:\n",
+    "        x, y, a, b = build # 가로 좌표 x, 세로 좌표 y, 구조물 종류 a, 설치/삭제 여부 b\n",
+    "        # 설치인 경우\n",
+    "        if b == 1:\n",
+    "            # 기둥 설치인 경우\n",
+    "            if a == 0:\n",
+    "                if check_pillar(n, x, y, wall): # 기둥 설치가 가능한지 체크하고 가능하면 설치\n",
+    "                    if wall[x][y] == 1:\n",
+    "                        wall[x][y] = 2\n",
+    "                    elif wall[x][y] == -1:\n",
+    "                        wall[x][y] = 0\n",
+    "            # 보 설치인 경우\n",
+    "            else:\n",
+    "                if check_beam(n, x, y, wall): # 보 설치가 가능한지 체크하고 가능하면 설치\n",
+    "                    if wall[x][y] == 0:\n",
+    "                        wall[x][y] = 2\n",
+    "                    elif wall[x][y] == -1:\n",
+    "                        wall[x][y] = 1\n",
+    "        # 삭제인 경우\n",
+    "        else:\n",
+    "            # 기둥 삭제인 경우\n",
+    "            if a == 0:\n",
+    "                if can_delete_pillar(n, x, y, wall): # 기둥 삭제가 가능한지 체크하고 가능하면 삭제\n",
+    "                    if wall[x][y] == 2:\n",
+    "                        wall[x][y] = 1\n",
+    "                    elif wall[x][y] == 0:\n",
+    "                        wall[x][y] = -1\n",
+    "            # 보 삭제인 경우\n",
+    "            else:\n",
+    "                if can_delete_beam(n, x, y, wall): # 보 삭제가 가능한지 체크하고 가능하면 삭제\n",
+    "                    if wall[x][y] == 2:\n",
+    "                        wall[x][y] = 0\n",
+    "                    elif wall[x][y] == 1:\n",
+    "                        wall[x][y] = -1\n",
+    "    \n",
+    "    result = [] # 최종 구조물 상태를 담을 변수 선언\n",
+    "    # 벽면을 전부 확인하면서 건설되어 있는 구조물을 result 변수에 추가\n",
+    "    # 이 순서대로 돌면 마지막에 정렬해주지 않아도 x좌표 기준 오름차순에서 y좌표 기준 오름차순에서 기둥이 보보다 앞에 오게 입력됨\n",
+    "    for x in range(n+1):\n",
+    "        for y in range(n+1):\n",
+    "            if wall[x][y] == 0:\n",
+    "                result.append([x, y, 0])\n",
+    "            elif wall[x][y] == 1:\n",
+    "                result.append([x, y, 1])\n",
+    "            elif wall[x][y] == 2:\n",
+    "                result.append([x, y, 0])\n",
+    "                result.append([x, y, 1])\n",
+    "                \n",
+    "    # 정답 리턴                   \n",
+    "    return result\n",
+    "\n",
+    "solution(n, build_frame1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 이전에 풀었던 풀이\n",
+    "* 이 때는 기둥 정보랑 보 정보를 다른 리스트에 각각 담아서 풀었다\n",
+    "* 이미 문제 조건에서 벽면을 벗어나게 구조물을 설치하는 경우는 없고, 바닥에 보를 설치하는 경우도 없고, 구조물이 겹치거나 없는 구조물을 삭제하는 경우는 없다고 했으므로 이 코드처럼 위 코드도 조건들을 조금 줄일 수 있었을 것 같다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 기둥은 ver, 보는 hor로 명명\n",
+    "def check_ver(x, y, ver_arr, hor_arr):\n",
+    "    if (y == 0) or (hor_arr[x-1][y] == 1) or hor_arr[x][y] == 1 or (ver_arr[x][y-1] == 1):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "def check_hor(x, y, ver_arr, hor_arr):\n",
+    "    if (ver_arr[x][y-1] == 1) or ver_arr[x+1][y-1] == 1 or ((hor_arr[x-1][y] == 1) and (hor_arr[x+1][y]==1)):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "def set_ver(x, y, ver_arr, hor_arr):\n",
+    "    if check_ver(x, y, ver_arr, hor_arr):\n",
+    "        ver_arr[x][y] = 1\n",
+    "    return 0\n",
+    "        \n",
+    "def set_hor(x, y, ver_arr, hor_arr):\n",
+    "    if check_hor(x, y, ver_arr, hor_arr):\n",
+    "        hor_arr[x][y] = 1\n",
+    "    return 0\n",
+    "    \n",
+    "def del_ver(x, y, ver_arr, hor_arr):\n",
+    "    cond = True\n",
+    "    ver_arr[x][y] = 0\n",
+    "    if ver_arr[x][y+1] == 1 and check_ver(x, y+1, ver_arr, hor_arr) == False:\n",
+    "      cond = False\n",
+    "    if hor_arr[x][y+1] == 1 and check_hor(x, y+1, ver_arr, hor_arr) == False:\n",
+    "      cond = False\n",
+    "    if hor_arr[x-1][y+1] == 1 and check_hor(x-1, y+1, ver_arr, hor_arr) == False:\n",
+    "      cond = False\n",
+    "    if cond == False:\n",
+    "        ver_arr[x][y] = 1\n",
+    "    return 0\n",
+    "    \n",
+    "def del_hor(x, y, ver_arr, hor_arr):\n",
+    "    cond = True\n",
+    "    hor_arr[x][y] = 0\n",
+    "    if ver_arr[x][y] == 1 and check_ver(x, y, ver_arr, hor_arr) == False:\n",
+    "      cond = False\n",
+    "    if hor_arr[x-1][y] == 1 and check_hor(x-1, y, ver_arr, hor_arr) == False:\n",
+    "      cond = False\n",
+    "    if ver_arr[x+1][y] == 1 and check_ver(x+1, y, ver_arr, hor_arr) == False:\n",
+    "      cond = False\n",
+    "    if hor_arr[x+1][y] == 1 and check_hor(x+1, y, ver_arr, hor_arr) == False:\n",
+    "      cond = False\n",
+    "    if cond == False:\n",
+    "        hor_arr[x][y] = 1\n",
+    "    return 0\n",
+    "    \n",
+    "\n",
+    "def solution(n, build_frame):\n",
+    "    # 시작 좌표 기준 설정\n",
+    "    ver_arr = [[0 for _ in range(n+1)] for _ in range(n+1)]\n",
+    "    hor_arr = [[0 for _ in range(n+1)] for _ in range(n+1)]\n",
+    "      \n",
+    "    for arr in build_frame:\n",
+    "        x, y, a, b = arr\n",
+    "        if a == 0 and b == 1:\n",
+    "            set_ver(x, y, ver_arr, hor_arr)\n",
+    "        elif a == 1 and b == 1:\n",
+    "            set_hor(x, y, ver_arr, hor_arr)\n",
+    "        elif a == 0 and b == 0:\n",
+    "            del_ver(x, y, ver_arr, hor_arr)\n",
+    "        else:\n",
+    "            del_hor(x, y, ver_arr, hor_arr)\n",
+    "    \n",
+    "    answer = []\n",
+    "    for i_x, x in enumerate(ver_arr):\n",
+    "        for i_y, y in enumerate(x):\n",
+    "            if y == 1:\n",
+    "                answer.append([i_x, i_y, 0])\n",
+    "    for i_x, x in enumerate(hor_arr):\n",
+    "        for i_y, y in enumerate(x):\n",
+    "            if y == 1:\n",
+    "                answer.append([i_x, i_y, 1])   \n",
+    "    return sorted(answer)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 현재 설치된 구조물이 '가능한' 구조물인지 확인하는 함수\n",
+    "def possible(answer):\n",
+    "    for x, y, stuff in answer:\n",
+    "        if stuff == 0: # 설치된 것이 '기둥'인 경우\n",
+    "            # '바닥 위' 혹은 '보의 한쪽 끝부분 위' 혹은 '다른 기둥 위'라면 정상\n",
+    "            if y == 0 or [x-1, y] in answer or [x, y, 1] in answer or [x, y-1, 0] in answer:\n",
+    "                continue\n",
+    "            return False # 아니라면 거짓(False) 반환\n",
+    "        elif stuff == 1: # 설치된 것이 '보'인 경우\n",
+    "            # '한쪽 끝부분이 기둥 위' 혹은 '양쪽 끝부분이 다른 보와 동시에 연결'이라면 정상\n",
+    "            if [x, y-1, 0] in answer or [x+1, y-1, 0] in answer or ([x-1, y, 1] in answer and [x+1, y, 1] in answer):\n",
+    "                continue\n",
+    "            return False # 아니라면 거짓(False) 반환\n",
+    "    return True\n",
+    "\n",
+    "def solution(n, build_frame):\n",
+    "    answer = []\n",
+    "    for frame in build_frame: # 작업(frame)의 개수는 최대 1,000개\n",
+    "        x, y, stuff, operate = frame\n",
+    "        if operate == 0: # 삭제하는 경우\n",
+    "            answer.remove([x, y, stuff]) # 일단 삭제를 해본 뒤에\n",
+    "            if not possible(answer): # 가능한 구조물인지 확인\n",
+    "                answer.append([x, y, stuff]) # 가능한 구조물이 아니라면 다시 설치\n",
+    "        if operate == 1: # 설치하는 경우\n",
+    "            answer.append([x, y, stuff]) # 일단 설치를 해본 뒤에\n",
+    "            if not possible(answer): # 가능한 구조물인지 확인\n",
+    "                answer.remove([x, y, stuff]) # 가능한 구조물이 아니라면 다시 제거\n",
+    "    return sorted(answer) # 정렬된 결과를 반환"
    ]
   },
   {
